k8s/catalogservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogservice
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogservice
  template:
    metadata:
      labels:
        app: catalogservice
    spec:
      containers:
      - name: catalogservice
        image: europe-southwest1-docker.pkg.dev/microservicesdotnet/microservices-repo/catalogservice:latest
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: catalogservice
  namespace: microservices
spec:
  type: ClusterIP
  selector:
    app: catalogservice
  ports:
    - port: 80
      targetPort: 80
